--- a/index.html
+++ b/index.html
@@ -323,15 +323,15 @@
         </div>
         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
             <input type="hidden" name="access_key" value="3f8a4956-e914-430d-8050-de5e36eb903b">
-            <input type="text" name="familyname" placeholder="Nom" id="familyname" required class="form-input">
-            <input type="text" name="name" placeholder="Prénom" id="name" required class="form-input">
-            <input type="text" name="num" placeholder="Numéro de téléphone" id="num" required class="form-input">
-            <select id="Pname" name="product" class="contact-inputs" required>
+            <input type="text" name="Nom" placeholder="Nom" id="familyname" required class="form-input">
+            <input type="text" name="Prénom" placeholder="Prénom" id="name" required class="form-input">
+            <input type="text" name="Numéro-de-téléphone" placeholder="Numéro de téléphone" id="num" required class="form-input">
+            <select id="Pname" name="Type-de-service" class="contact-inputs" required>
             <option value="" disabled selected>Type de service</option>
-            <option value="Eeau">Réparation de Fuites</option>
-            <option value="Gas">Installation de Chauffe-eau</option>
-            <option value="Toillete">Débouchage de Canalisations</option>
-            <option value="chauffage">Rénovation de Salles de Bain</option>
+            <option value="Réparation de Fuites">Réparation de Fuites</option>
+            <option value="Installation de Chauffe-eau">Installation de Chauffe-eau</option>
+            <option value="Débouchage de Canalisations">Débouchage de Canalisations</option>
+            <option value="Rénovation de Salles de Bain">Rénovation de Salles de Bain</option>
         </select>
             <textarea name="adresse" placeholder="Adresse" id="adresse" required class="form-textarea"></textarea>
             <textarea name="message" placeholder="Message" id="message" class="form-textarea"></textarea>
