--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div id="simpleCarousel" class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="/images/1.jpg" alt="Produit 1">
+                    <img src="./images/1.jpg" alt="Produit 1">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Réparation de Fuites</h3>
                         <p class="fade-in">Nous localisons et réparons les fuites rapidement pour éviter les dommages.</p>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/2.jpg" alt="Produit 2">
+                    <img src="./images/2.jpg" alt="Produit 2">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Installation de Chauffe-eau</h3>
                         <p class="fade-in">Installation et entretien de chauffe-eau pour assurer une eau chaude constante.</p>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/3.jpg" alt="Produit 3">
+                    <img src="./images/3.jpg" alt="Produit 3">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Débouchage de Canalisations</h3>
                         <p class="fade-in">Service rapide pour déboucher vos éviers, toilettes et autres canalisations.</p>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/4.jpg" alt="Produit 4">
+                    <img src="./images/4.jpg" alt="Produit 4">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Rénovation de Salles de Bain</h3>
                         <p class="fade-in">Nous transformons votre salle de bain avec des installations modernes et durables.</p>
@@ -195,7 +195,7 @@
     <div class="produits" id="Réparation de Fuites">
         <div class="produit-item">
             <div class="produit-img">
-                <img src="/images/5.jpg" alt="Réparation de Fuites">
+                <img src="./images/5.jpg" alt="Réparation de Fuites">
 
             </div>
             <div class="produit-des">
@@ -209,7 +209,7 @@
 
         <div class="produit-item" id="Installation de Chauffe-eau">
             <div class="produit-img">
-                <img src="/images/4.jpg" alt="Installation de Chauffe-eau">
+                <img src="./images/4.jpg" alt="Installation de Chauffe-eau">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
@@ -224,7 +224,7 @@
 
         <div class="produit-item">
             <div class="produit-img">
-                <img src="/images/2.jpg" alt="Rénovation de Salles de Bain">
+                <img src="./images/2.jpg" alt="Rénovation de Salles de Bain">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
@@ -236,7 +236,7 @@
 
         <div class="produit-item">
             <div class="produit-img">
-                <img src="/images/4.jpg" alt="Débouchage de Canalisations">
+                <img src="./images/4.jpg" alt="Débouchage de Canalisations">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
