--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 
 
-<script type="text/javascript" src="/script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 
 
 </body>
