--- a/propos.html
+++ b/propos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="KOSS PLOMBIERE-CHAUFFAGE-VENTILISATION-CLIMATISATION-DIMENSIONNEMENT-DEBOUCHAGE-RAMONAGE . Contactez-nous pour un service de qualité - Montereau-Fault-Yonne France."
     />
     <!--connecter le html avec le fichier style -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!--connecter le html avec le fichier font awsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <!--connecter le html avec le fichier boxicon -->
@@ -214,7 +214,7 @@
 
 
 
-    <script type="text/javascript" src="/script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 
 
 </body>
