--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Top Promo Bar -->
         <div class="promo">
             <span>Services de Plomberie Pro</span>
-            <span>Disponible dans toute la région</span>
+            <span>Disponible sur un rayon de 30 km de Montreau</span>
             <span>Inspection gratuite avec chaque service</span>
             <span>Appelez pour une consultation</span>
             <span class="fermer1"><i class="bx bx-x"></i></span>
@@ -85,8 +85,16 @@
                     <!-- Catalogue des éléments -->
                     <ul class="catalogue" id="catalogue">
                         <li><a href="#Installation de Chauffe-eau">Installation de Chauffe-eau</a></li>
-                        <li><a href="#fuites">Fuites</a></li>
+                        <li><a href="#Réparation de Fuites">Réparation de Fuites</a></li>
+                        <li><a href="#Rénovation de Salles de Bain">Rénovation de Salles de Bain</a></li>
+                        <li><a href="#Débouchage de Canalisations">Débouchage de Canalisations</a></li>
+                        <li><a href="#Installation de Systèmes de Chauffage">Installation de Systèmes de Chauffage</a></li>
+                        <li><a href="#Installation de Systèmes de Ventilation">Installation de Systèmes de Ventilation</a></li>
+                        <li><a href="#Installation de Climatisation">Installation de Climatisation</a></li>
+                        <li><a href="#Installation de Systèmes Sanitaires">Installation de Systèmes Sanitaires</a></li>
+                        <li><a href="#Entretien et Maintenance">Entretien et Maintenance</a></li>
                     </ul>
+
                 </div>
 
                 <!-- Menu and Categories Side by Side -->
@@ -126,14 +134,14 @@
     <section class="begin" id="begin">
         <div class="begin-site">
             <img src="./images/kosso.png" alt="Logo KOSS Plomberie">
-            <h1>Bienvenue chez KOSS PLOMBERIE</h1>
+            <h1>Bienvenue chez KOSS PCVC + R </h1>
             <h3>EXPERT EN PLOMBERIE ET SOLUTIONS ÉNERGÉTIQUES</h3>
             <h2>Services de plomberie de haute qualité</h2>
             <p>Nous proposons des services complets en plomberie, chauffage, ventilation, climatisation, installation de systèmes
                 sanitaires, et débouchage. Que ce soit pour l'installation, la réparation ou l'entretien.</p>
         </div>
         <div class="prese">
-            <p>KOSS Plomberie est votre partenaire de confiance pour tous vos travaux de plomberie.Avec une expertise reconnue,
+            <p>KOSS PCVC + R est votre partenaire de confiance pour tous vos travaux de plomberie.Avec une expertise reconnue,
                 notre technicien plombier assure des interventions rapides, efficaces et de qualité pour tous vos projets.
                 Que ce soit pour un dépannage d'urgence, un entretien régulier ou une installation complète, nous garantissons
                 un service fiable, professionnel et adapté à vos attentes.</p>
@@ -146,7 +154,7 @@
         <div id="simpleCarousel" class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="./images/1.jpg" alt="Produit 1">
+                    <img src="./images/fuit.jpg" alt="Produit 1">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Réparation de Fuites</h3>
                         <p class="fade-in">Nous localisons et réparons les fuites rapidement pour éviter les dommages.</p>
@@ -154,7 +162,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/2.jpg" alt="Produit 2">
+                    <img src="./images/chauf3.jpg" alt="Produit 2">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Installation de Chauffe-eau</h3>
                         <p class="fade-in">Installation et entretien de chauffe-eau pour assurer une eau chaude constante.</p>
@@ -162,7 +170,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/3.jpg" alt="Produit 3">
+                    <img src="./images/canal.jpg" alt="Produit 3">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Débouchage de Canalisations</h3>
                         <p class="fade-in">Service rapide pour déboucher vos éviers, toilettes et autres canalisations.</p>
@@ -170,7 +178,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/4.jpg" alt="Produit 4">
+                    <img src="./images/salle.jpg" alt="Produit 4">
                     <div class="carousel-caption">
                         <h3 class="fade-in">Rénovation de Salles de Bain</h3>
                         <p class="fade-in">Nous transformons votre salle de bain avec des installations modernes et durables.</p>
@@ -185,70 +193,131 @@
 </section>
 <hr class="separator-line">
 <!-- Section2///////////////////////////////////////////////////////////////////////////////////////////-->
-<!-- Afficher les produits de shop -->
+<!-- Afficher les services  -->
+
 <section class="produit-categories">
     <div class="categories-description">
         <h5>EXPERTISE CERTIFIÉE</h5>
         <h2>Nos Services de Plomberie</h2>
-        <p>Découvrez la qualité et la fiabilité pour tous vos besoins en plomberie</p>
+        <p>Découvrez la qualité et la fiabilité pour tous vos besoins en plomberie, chauffage, ventilation, climatisation, et
+            plus encore.</p>
     </div>
-    <div class="produits" id="Réparation de Fuites">
-        <div class="produit-item">
+    <div class="produits" id="Services de Plomberie">
+        <div class="produit-item" id="Réparation de Fuites">
             <div class="produit-img">
                 <img src="./images/5.jpg" alt="Réparation de Fuites">
-
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
-                    <li><a href="#">Réparation de Fuites</a></li>
-
-
+                    <li><a href="#section-form">Réparation de Fuites</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="produit-item" id="Installation de Chauffe-eau">
             <div class="produit-img">
-                <img src="./images/4.jpg" alt="Installation de Chauffe-eau">
+                <img src="./images/chauf4.jpg" alt="Installation de Chauffe-eau">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
-                    <li><a href="#">Installation de Chauffe-eau</a></li>
-                    <li>
-                        <a href="#"></a>
-                    </li>
-
+                    <li><a href="#section-form">Installation de Chauffe-eau</a></li>
                 </ul>
             </div>
         </div>
 
-        <div class="produit-item">
+        <div class="produit-item" id="Rénovation de Salles de Bain">
             <div class="produit-img">
-                <img src="./images/2.jpg" alt="Rénovation de Salles de Bain">
+                <img src="./images/3.jpg" alt="Rénovation de Salles de Bain">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
-                    <li><a href="#">Rénovation de Salles de Bain</a></li>
-
+                    <li><a href="#section-form">Rénovation de Salles de Bain</a></li>
                 </ul>
             </div>
         </div>
 
-        <div class="produit-item">
+        <div class="produit-item" id="Débouchage de Canalisations">
             <div class="produit-img">
-                <img src="./images/4.jpg" alt="Débouchage de Canalisations">
+                <img src="./images/canal.jpg" alt="Débouchage de Canalisations">
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
-                    <li><a href="#">Débouchage de Canalisations</a></li>
-
-
+                    <li><a href="#section-form">Débouchage de Canalisations</a></li>
                 </ul>
             </div>
         </div>
+
+        <!-- Ajout des nouveaux services -->
+
+        <div class="produit-item" id="Installation de Systèmes de Chauffage">
+            <div class="produit-img">
+                <img src="./images/chf.jpg" alt="Installation de Systèmes de Chauffage">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="#section-form">Installation de Systèmes de Chauffage</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="produit-item" id="Installation de Systèmes de Ventilation">
+            <div class="produit-img">
+                <img src="./images/vent.jpg" alt="Installation de Systèmes de Ventilation">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="#section-form">Installation de Systèmes de Ventilation</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="produit-item" id="Installation de Climatisation">
+            <div class="produit-img">
+                <img src="./images/clim.png" alt="Installation de Climatisation">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="#section-form">Installation de Climatisation</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="produit-item" id="Installation de Systèmes Sanitaires">
+            <div class="produit-img">
+                <img src="./images/sani.png" alt="Installation de Systèmes Sanitaires">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="#section-form">Installation de Systèmes Sanitaires</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="produit-item" id="Entretien et Maintenance">
+            <div class="produit-img">
+                <img src="./images/main.png" alt="Entretien et Maintenance">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="#section-form">Entretien et Maintenance</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="produit-item" id="Service de Ramonage">
+            <div class="produit-img">
+                <img src="./images/ramonage.png" alt="Service de Ramonage">
+            </div>
+            <div class="produit-des">
+                <ul class="produit-list">
+                    <li><a href="https://djidji13-7.github.io/KOSS-RAMONAGE/" target="_blank">Pour des Service de Ramonage (Dirigez-vous vers notre site de ramonage)</a></li>
+                </ul>
+            </div>
+        </div>
+
     </div>
-
 </section>
+
 
 <hr class="separator-line">
 
@@ -266,7 +335,7 @@
             compréhension et restons à votre disposition.</p>
     </div>
     <form action="https://api.web3forms.com/submit" method="POST">
-        <input type="hidden" name="access_key" value="a0323b0d-8442-46c4-a24c-333484932f1e">
+        <input type="hidden" name="access_key" value="1d59af47-21d3-469b-8309-d540fe33b6f5">
         <input type="text" name="familyname" placeholder="Nom" id="familyname" class="contact-inputs" required>
         <input type="text" name="name" placeholder="Prénom" id="name" class="contact-inputs" required>
         <select id="Pname" name="product" class="contact-inputs" required>
@@ -275,6 +344,16 @@
             <option value="Installation de Chauffe-eau">Installation de Chauffe-eau</option>
             <option value="Débouchage de Canalisations">Débouchage de Canalisations</option>
             <option value="Rénovation de Salles de Bain">Rénovation de Salles de Bain</option>
+
+
+
+             <option value="Installation de Systèmes de Chauffage">Installation de Systèmes de Chauffage</option>
+            <option value="Installation de Systèmes de Ventilation">Installation de Systèmes de Ventilation</option>
+            <option value="Installation de Climatisation">Installation de Climatisation</option>
+            <option value="Installation de Systèmes Sanitaires">Installation de Systèmes Sanitaires</option>
+            <option value="Autres">Autres</option>
+            
+
         </select>
 
         <label for="datetime" class="date-label">Choisissez la date :</label>
@@ -416,7 +495,7 @@
 
 
 
-<script type="text/javascript" src="./script.js"></script>
+<script type="text/javascript" src="/script.js"></script>
 
 
 </body>
