--- a/propos.html
+++ b/propos.html
@@ -38,7 +38,7 @@
         <!-- Top Promo Bar -->
         <div class="promo">
             <span>Services de Plomberie Pro</span>
-            <span>Disponible dans toute la région</span>
+            <span>Disponible sur un rayon de 30 km de Montreau</span>
             <span>Inspection gratuite avec chaque service</span>
             <span>Appelez pour une consultation</span>
             <span class="fermer1"><i class="bx bx-x"></i></span>
@@ -84,8 +84,15 @@
 
                     <!-- Catalogue des éléments -->
                     <ul class="catalogue" id="catalogue">
-                        <li><a href="#Installation de Chauffe-eau">Installation de Chauffe-eau</a></li>
-                        <li><a href="#fuites">Fuites</a></li>
+                        <li><a href="index.html#Installation de Chauffe-eau">Installation de Chauffe-eau</a></li>
+                        <li><a href="index.html#Réparation de Fuites">Réparation de Fuites</a></li>
+                        <li><a href="index.html#Rénovation de Salles de Bain">Rénovation de Salles de Bain</a></li>
+                        <li><a href="index.html#Débouchage de Canalisations">Débouchage de Canalisations</a></li>
+                        <li><a href="index.html#Installation de Systèmes de Chauffage">Installation de Systèmes de Chauffage</a></li>
+                        <li><a href="index.html#Installation de Systèmes de Ventilation">Installation de Systèmes de Ventilation</a></li>
+                        <li><a href="index.html#Installation de Climatisation">Installation de Climatisation</a></li>
+                        <li><a href="index.html#Installation de Systèmes Sanitaires">Installation de Systèmes Sanitaires</a></li>
+                        <li><a href="index.html#Entretien et Maintenance">Entretien et Maintenance</a></li>
                     </ul>
                 </div>
 
@@ -129,16 +136,16 @@
 
     <hr class="separator-line">
     <section class="propos-nous">
-        <h1>Bienvenue chez KOSS PLOMBERIE</h1>
+        <h1>Bienvenue chez KOSS PCVC + R</h1>
         <h3>Votre partenaire de confiance en plomberie</h3>
         <hr class="separator-line">
         <div class="propo">
             <div class="presentation">
                 <h3>Qui sommes-nous</h3>
-                <p>Koss Plomberie est né de la passion d'un plombier dévoué, déterminé à offrir des services de plomberie de
-                    haute qualité. Fort de nombreuses années d'expérience et d'une formation rigoureuse, Koss a transformé
+                <p>KOSS PCVC + R est né de la passion d'un plombier dévoué, déterminé à offrir des services de plomberie de
+                    haute qualité. Fort de nombreuses années d'expérience et d'une formation rigoureuse, KOSS a transformé
                     son amour pour les systèmes hydrauliques et les solutions de plomberie en une entreprise dédiée à la
-                    satisfaction de ses clients. Chez Kos Plomberie, chaque projet est réalisé avec soin, professionnalisme
+                    satisfaction de ses clients. Chez KOSS PCVC + R, chaque projet est réalisé avec soin, professionnalisme
                     et un souci du détail qui fait la différence.</p>
             </div>
             <div class="mission">
@@ -146,11 +153,11 @@
                 <p>Notre mission est simple : fournir des services de plomberie fiables et de qualité exceptionnelle, tout en
                     assurant la sécurité et le confort de votre domicile ou entreprise. Nous nous engageons à résoudre vos
                     problèmes de plomberie avec rapidité et efficacité, en utilisant les meilleures pratiques et les technologies
-                    les plus récentes. Kos's Services, c'est l'assurance d'un travail bien fait, à chaque intervention.</p>
+                    les plus récentes. KOSS PCVC + R, c'est l'assurance d'un travail bien fait, à chaque intervention.</p>
             </div>
             <div class="valeurs">
                 <h3>Nos valeurs</h3>
-                <p>Chez Koss Plomberie, nous croyons en l'importance de la transparence, de l'intégrité et du respect de nos
+                <p>Chez KOSS PCVC + R, nous croyons en l'importance de la transparence, de l'intégrité et du respect de nos
                     engagements. Nous nous efforçons de bâtir des relations de confiance avec nos clients en offrant des
                     services qui répondent exactement à leurs besoins. La passion pour notre métier et notre désir de toujours
                     faire mieux nous poussent à constamment évoluer et à rester à la pointe de l'innovation en plomberie.</p>
@@ -214,7 +221,7 @@
 
 
 
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="/script.js"></script>
 
 
 </body>
