--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&display=swap" rel="stylesheet">
 
     <!--icone de l'onglet-->
-   <link rel="shortcut icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/images/kosso.ico" type="image/x-icon">
+   <link rel="shortcut icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/images/kosso.png" type="image/png">
 
 
 
