--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&display=swap" rel="stylesheet">
 
     <!--icone de l'onglet-->
-  <link rel="icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/images/kosso.png" type="image/png">
-<link rel="shortcut icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/images/kosso.png" type="image/png">
+  <link rel="icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/kosso.ico" type="image/png">
+<link rel="shortcut icon" href="https://djidji13-7.github.io/KOSS-PLOMBERIE/kosso.ico" type="image/png">
 
 
 
