--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
             <div class="produit-des">
                 <ul class="produit-list">
-                    <li><a href="https://djidji13-7.github.io/KOSS-RAMONAGE/" target="_blank">Pour des Service de Ramonage (Dirigez-vous vers notre site de ramonage)</a></li>
+                    <li><a href="https://djidji13-7.github.io/KOSS-RAMONAGE/" target="_blank">Pour des Services de Ramonage (Dirigez-vous vers notre site de ramonage)</a></li>
                 </ul>
             </div>
         </div>
